--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "dotenv": "^8.2.0",
     "emailjs": "^3.4.0",
     "emailjs-com": "^2.6.4",
+    "immutable": "^4.0.0-rc.12",
+    "node-sass": "^5.0.0",
+    "ramda": "^0.27.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
+    "redux-form": "^8.3.7",
+    "redux-immutable": "^4.0.0",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
